{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Controls",
            "id": "f61fafff-8e1b-462d-b0d2-6508e97c1e97",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "f91b49db-ccbc-4d32-bf8d-42e2d71a81f8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e080e66d-ebff-4cc3-8adc-62db10f2e15f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=5,pressPoint=0.1)"
                },
                {
                    "name": "HoldJump",
                    "type": "Button",
                    "id": "775649c3-1a46-47e1-8f31-0ece7e2d421d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=0.01)"
                },
                {
                    "name": "DrinkPotion",
                    "type": "Button",
                    "id": "287917e8-bc4b-4e4f-8bd9-7183a6cf155e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "72336f2e-a08e-467d-a3e2-2f12d31be6c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "7c78d094-a354-43bb-b28e-6982b8e9c627",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "AttackDirection",
                    "type": "PassThrough",
                    "id": "478104c3-4020-4681-836d-2b06d4671ff2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "6cbc6a5d-e06c-4717-94ba-7c1318955225",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Parry",
                    "type": "Button",
                    "id": "88df90a4-af52-4205-b37d-e2fbb0c642a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "4164cd41-845c-4b51-af29-a8c91b51e050",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "28713f1e-cf55-4186-aef6-70ea2b59aadc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9c2c87fe-9976-41ff-aa27-3494af791cf0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftJoystick",
                    "id": "ac229a99-b9f9-4125-8de2-48a7ca2138fa",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6d9e60b7-3a85-4772-9e60-cebf175f7758",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3c81e90f-4e2e-4c0b-af0e-74b050cf6a9b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5309fd54-aad7-40e3-a12b-0e7f647d0fd9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7c21f43-b183-4012-bad1-d0826368ed70",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd1aa8de-fd10-431b-8327-9c40e6c95232",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "HoldJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0211e9e0-73a3-4fdb-a461-bb2a3f915cdf",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "HoldJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5784abad-1e6d-4249-9cba-45aa7dbc8322",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "DrinkPotion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c427b716-e21f-4e07-9635-976a7d8c3d32",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DrinkPotion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "563885e4-ec61-46ff-94b9-57d77535c313",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28aaafdf-c46c-4063-8978-fa3b4bd9e475",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "884d3bf4-a28b-48d7-805b-afee2a354ae9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5f2a5e0-28e3-4b67-aac9-e8d444ba81d2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "76fc023d-732f-496f-b887-bea5ddbc81b5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c84b09fd-4b5a-46e8-a519-af5e06cf1022",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "AttackDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "2e0f4e79-1afe-4217-902f-c7e9e1722063",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "AttackDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a3055f8e-5564-4ca3-afd8-de283622e0dc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24566bef-35c1-46de-8a13-292b649e9110",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d624873c-af62-4883-91d4-ca0c53db0d7d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "131293d5-c37a-4112-a5d0-1a6895dcb5aa",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LogoControls",
            "id": "4cacb013-b7f6-48a7-b688-1bc7f80a447e",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "7f479f71-0930-41a6-b5ac-3faf13f698e1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb969e00-4c43-43f7-9dec-42249322bdc0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5810a2fb-9553-44c6-b881-d6031d651106",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81bbe49f-1d96-4fa3-8840-c2831c6e3c13",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f45aea3-5712-4d08-9c93-bac1a4abd50f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66ad2284-c6a9-4589-8100-e8d34884c802",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": []
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        }
    ]
}